--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,18 +1,33 @@
-
-<div class="medium-4 columns">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-  HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-</div>
-<div class="medium-4 columns">
-  <h4>Angular</h4>
-  <p>
-  AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-</div>
-<div class="medium-4 columns">
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div id="welcome">
+    <h1>Welcome</h1>
 </div>
 
+<div id="authOff">
+  <div class="medium-4 columns">
+    <h4>HTML5 Boilerplate</h4>
+    <p>
+    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+    </p>
+  </div>
+  <div class="medium-4 columns">
+    <h4>Angular</h4>
+    <p>
+    AngularJS is a toolset for building the framework most suited to your application development.
+    </p>
+  </div>
+  <div class="medium-4 columns">
+    <h4>Karma</h4>
+    <p>Spectacular Test Runner for JavaScript.</p>
+  </div>
+</div>
+
+<div id="authOn" style="display:none" class="row">
+  <div class="medium-3 columns">
+    <div id="profile">
+      <h2></h2>
+    </div>
+  </div>
+  <div class="medium-9 columns">
+    <div id="visiblePeople"></div>
+  </div>
+</div>
